syntax = "proto3";
option java_outer_classname = "MadagascarGrpcErrorCode";
option java_multiple_files = true;
package com.keepreal.madagascar.common.exceptions;

enum ErrorCode {
    REQUEST_SUCC = 0;
    REQUEST_SUCC_HTTP_KEEP_ALIVE = 1;
    REQUEST_TIME_OUT = 1000;
    REQUEST_INVALID_ARGUMENT = 1103;
    REQUEST_NOT_IMPLEMENTED_FUNCTION_ERROR = 1108;
    REQUEST_LOW_VERSION_ERROR = 1301;
    REQUEST_FORBIDDEN = 1403;
    REQUEST_NAME_INVALID = 1998;
    REQUEST_UNEXPECTED_ERROR = 1999;

    REQUEST_GRPC_IMAGE_UPLOAD_ERROR = 2000;
    REQUEST_IMAGE_NUMBER_TOO_LARGE = 2001;

    REQUEST_USER_NOT_FOUND_ERROR = 3004;
    REQUEST_USER_UID_EXISTED_ERROR = 3005;

    REQUEST_ISLAND_NOT_SUBSCRIBED_ERROR = 3010;
    REQUEST_ISLAND_NOT_FOUND_ERROR = 3014;
    REQUEST_ISLAND_SECRET_ERROR = 3015;
    REQUEST_ISLAND_NAME_EXISTED_ERROR = 3016;
    REQUEST_ISLAND_CREATE_ERROR = 3017;

    REQUEST_COMMENT_NOT_FOUND_ERROR = 3024;

    REQUEST_FEED_NOT_FOUND_ERROR = 3034;

    REQUEST_MEMBERSHIP_DELETE_ERROR = 3031;
    REQUEST_MEMBERSHIP_NOT_FOUNT_ERROR = 3044;

    REQUEST_GRPC_TIMELINE_RETRIEVE_ERROR = 3051;

    REQUEST_CHATGROUP_NO_RIGHTS_ERROR = 3062;
    REQUEST_CHATGROUP_MAX_MEMBER_REACHED_ERROR = 3063;
    REQUEST_CHATGROUP_NOT_FOUND_ERROR = 3064;
    REQUEST_CHATGROUP_NOT_MEMBER_ERROR = 3065;
    REQUEST_ISLAND_CHATGROUP_LIMIT_ERROR = 3066;

    REQUEST_GRPC_WECHAT_ORDER_PLACE_ERROR = 3101;
    REQUEST_GRPC_IOS_ORDER_PLACE_ERROR = 3102;
    REQUEST_GRPC_IOS_RECEIPT_VERIFY_ERROR = 3103;
    REQUEST_USER_BILLING_INFO_NOT_FOUND_ERROR = 3104;
    REQUEST_USER_BALANCE_WITHDRAW_DAY_LIMIT_ERROR = 3201;
    REQUEST_USER_BALANCE_WITHDRAW_LIMIT_ERROR = 3202;
    REQUEST_USER_BALANCE_NOT_FOUND_ERROR = 3204;
    REQUEST_USER_BALANCE_HAS_BEEN_FROZEN = 3205;
    REQUEST_USER_SHELL_INSUFFICIENT_ERROR = 3301;
    REQUEST_USER_SHELL_IOS_RECEIPT_INVALID_ERROR = 3302;
    REQUEST_USER_SHELL_IOS_RECEIPT_DUPLICATE_ERROR = 3303;
    REQUEST_USER_MOBILE_OTP_TOO_FREQUENTLY = 3304;
    REQUEST_USER_MOBILE_OTP_NOT_MATCH = 3305;

    REQUEST_REDIS_FAILED_PUT_ERROR = 3900;
    REQUEST_REDIS_SHORTURL_NOT_FOUND_ERROR = 3901;

    REQUEST_GRPC_LOGIN_INVALID = 4000;
    REQUEST_GRPC_TOKEN_EXPIRED = 4001;
    REQUEST_GRPC_INVALID_REFRESH_TOKEN = 4002;
    REQUEST_GRPC_LOGIN_FROZEN = 4003;

    REQUEST_SUBSCRIPTION_SQL_DUPLICATE_ERROR = 5000;
    REQUEST_ISLAND_SQL_DUPLICATE_ERROR = 5001;

    REQUEST_RONGCLOUD_RPC_ERROR = 9001;
}